# backtestlibrary

./: CHANGELOG.md  README.md  __init__.py  analyzers.py  bt_types.py  column_definitions.py  column_library.py  columns.py  data.py  engine.py  exit_metrics.py  feed.py  io.py  librarycolumn_enrichment.py  metrics.py  monte_carlo.py  plotting.py  pyproject.toml  run_backbone_template.py  run_strategy_parallel.py  sizers.py  strategy_template.ipynb  strategy_template.py  trade_enrichment.py  types.py
__pycache__/: trade_enrichment._compute_elite_metrics_jit_kernel-234.py313.1.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-234.py313.2.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-234.py313.nbi  trade_enrichment._compute_elite_metrics_jit_kernel-243.py313.1.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-243.py313.nbi  trade_enrichment._compute_elite_metrics_jit_kernel-279.py313.1.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-279.py313.2.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-279.py313.nbi  trade_enrichment._compute_elite_metrics_jit_kernel-329.py313.1.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-329.py313.nbi  trade_enrichment._compute_elite_metrics_jit_kernel-428.py313.1.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-428.py313.2.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-428.py313.nbi  trade_enrichment._compute_elite_metrics_jit_kernel-436.py313.1.nbc  trade_enrichment._compute_elite_metrics_jit_kernel-436.py313.nbi  trade_enrichment._compute_elite_metrics_jit_kernel-437.py313.1.nbc  (+1 more)
(+17 files in other folders)
